[package]
name = "network-enclave"
version = "0.0.7"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
bincode = "1"
bitcoin = "0.31.1"
chrono = "0.4"
clap = { version = "4.4.18", features = ["derive"] }
hex = "0.4.3"
secp256k1 = "0.29.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1"
tracing = "0.1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.20.0"
